Roman Festchook         <roma@polesye.net>              27 Oct 2001
Simon Weijgers          <simon@weijgers.com>            16 Sep 1998-15 Nov 1999
Simon Wood                                              06 Jan 2000-12 Jan 2000
Thomas McWilliams       <tgm9999@yahoo.com>             27 Aug 1999-02 Apr 2001

-------------------------------------------------------------------------------

Fri Nov 23 15:36:00 EET 2001 Harry Kalogirou <harkal@gmx.net>

	* Fixed the "minix header" bug.

Fri Nov 23 02:32:35 EET 2001 Harry Kalogirou <harkal@gmx.net>

	* Fixed zero tcp window issues
	* Fixed do_fork(). It was not freeing the previously
	  allocated code segment when the allocation of the
	  data segment was failing.

Wed Nov 21 01:37:32 EET 2001 Harry Kalogirou <harkal@gmx.net>

	* Major fix in inet code.
	* Removed the CONFIG_SOCK_STREAMONLY config variable
	* Updated the help for CONFIG_SOCK_CLIENTONLY
	* Fixed the CONFIG_SOCK_CLIENT effect
	* Made inet sockets the default config
	* Made inet status report default
	* Updated the help for CONFIG_CHAR_DEV_RS

Sat Nov 19 17:26:40 EET 2001 Harry Kalogirou <harkal@gmx.net>
	
	* Reorder of some commands in inet code.

Tue Nov 20 21:39:03 GMT 2001	Paul Nasrat <pnasrat@uk.now.com>

	* Removed rogue space that stopped compile.

Tue Nov 20 00:34:21 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* THIS IS ELKS RELEASE 0.1.0-PRE1 !!!

	* Removed unused config variable CONFIG_IBMPC_RAINBOW pending any
	  decision on whether to port to this system.
	* Verified that all standard make commands now work using the
	  standardised ruleset.

Sun Nov 18 18:55:53 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* All temporary files now have *.tmp format names.
	* Created new `setdir` script to simplify the `make dist` command.
	  This gets rid of a nasty bug.
	* If `make dep` and `make nodep` find that the resulting Makefile
	  is unchanged, they retain it.
	* Moved `make dist` dir to be under the same directory that the ELKS